# Nutrition_RAG_API

./: .gitignore  README.md  app.py  main.py  pyproject.toml  rag_pipeline.py  requirement.txt
data/csv/: indian_food.csv
data/vector_store/0ed62cb0-7e76-43c3-9314-3e6bf3b4ee10/: index_metadata.pickle
